...
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/Theme.Vinylos.PopupOverlay">

                    <TextView
                        android:id="@+id/textview_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{album.name}"
                        android:textColor="#FFFFFF"
                        android:textSize="25dp"
                        app:layout_constraintEnd_toEndOf="parent"
...
                        android:layout_marginTop="5dp"
                        android:layout_weight="5"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/imageAlbum"
                            android:layout_width="132dp"
                            android:layout_height="180dp"
                            app:srcCompat="@drawable/artistslogo_background" />

                    </LinearLayout>

...
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:padding="0dp">

                            <TextView
                                android:id="@+id/textViewEmailLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="8dp"
                                android:paddingTop="3dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="2dp"
                                android:text="@string/albumGenre"
                                android:textStyle="bold|italic"
                                tools:text="Género" />

                            <TextView
                                android:id="@+id/textViewEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="8dp"
...
                                android:paddingBottom="2dp"
                                android:text="@string/albumRecordLabel"
                                android:textStyle="bold|italic"
                                tools:text="@string/albumRecordLabel" />

                            <TextView
                                android:id="@+id/textViewTelephone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="8dp"
                                android:paddingTop="3dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="2dp"
...
                        android:layout_marginTop="5dp"
                        android:layout_weight="5"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <Button
                            android:id="@+id/commentButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:background="#1F37BF"
                            android:text="@string/commentAlbumButton" />
                    </LinearLayout>
...
