<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:fadeScrollbars="true"
    tools:context=".ui.AlbumActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.Vinylos.PopupOverlay">

                <TextView
                    android:id="@+id/textview_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:text="@string/createAlbumCommentTitle"
                    android:textSize="25dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.appcompat.widget.Toolbar>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="100dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/commentRating"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#000000"
                        android:hint="@string/albumCommentRating"
                        android:textSize="30dp"
                        android:inputType="number"></EditText>

                    <EditText
                        android:id="@+id/commentDescription"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/albumCommentDescription"
                        android:textColor="#000000"
                        android:textColorHint="#000000"
                        android:inputType="textMultiLine"
                        android:lines="5"></EditText>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/createAlbumCommentButton"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/CreateCommentButton"
                            android:layout_weight="15"
                            android:text="@string/createAlbumCommentButton"></Button>

                        <Button
                            android:id="@+id/canceCreateAlbumCommentButton"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/CancelCreateCommentButton"
                            android:layout_weight="15"
                            android:text="@string/cancelCreateAlbumCommentButton"></Button>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        app:itemBackground="@color/blue"
        app:menu="@menu/bottom_navigation_menu" />


</FrameLayout>